metabaseKube/metabase.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-app
  labels:
    run: metabase-app
spec:
  selector:
    matchLabels:
      run: metabase-app
  template:
    metadata:
      generateName: metabase-app
      labels:
        run: metabase-app
    spec:
      containers:
        - name: metabase-app
          image: metabase/metabase:v0.46.6.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      volumes:
        - name: secret-volume
          secret:
            secretName: metabase-secret
