metabaseKube/mysql.sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: metabase-db
  labels:
    run: metabase-db
spec:
  selector:
    matchLabels:
      run: metabase-db
  serviceName: "metabase-db"
  template:
    metadata:
      generateName: metabase-db
      labels:
        run: metabase-db
    spec:
      containers:
        - name: metabase-db
          image: mysql:5.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: metabase-db
              containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mysql-data
            - mountPath: "/docker-entrypoint-initdb.d/"
              name: sql-init-script
            - mountPath: "/init-script"
              name: sql-schema-data
                #lifecycle:
                #postStart:
                #exec:
                #command: ["mysql", "mobility", "< /init_script/google-mobility.sql"]
      volumes:
        - name: secret-volume
          secret:
            secretName: metabase-db-secret
        - configMap:
            name: mobility-load
          name: sql-schema-data
        - name: sql-init-script
          hostPath:
            path: "/data/googleMobility"
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
