metabaseKube/metabase.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-app
  labels:
    run: metabase-app
spec:
  ports:
  - port: 3000
    name: metabase-app
    targetPort: 3000
  selector:
    run: metabase-app
  type: ClusterIP
