metabaseKube/mysql.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-db
  labels:
    run: metabase-db
spec:
  ports:
  - port: 3306
    name: metabase-db
    targetPort: 3306
  selector:
    run: metabase-db
  type: ClusterIP
