metabaseKube/metabase.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx    
  name: metabase-webpage 
spec:
  rules:
  - host: borbelli-metabase.probando
    http:
      paths:
      - backend:
          service:
            name: metabase-app
            port:
              number: 3000
        path: /
        pathType: Prefix
